[gd_scene load_steps=6 format=3 uid="uid://b7irhr2alfi6s"]

[ext_resource type="MeshLibrary" uid="uid://bsc8kjvyrit5v" path="res://griditems/meshlib.tres" id="1_baluf"]
[ext_resource type="Script" uid="uid://ckqn2jv66cj01" path="res://Scripts/EnemySpawning.gd" id="1_bvsxg"]
[ext_resource type="PackedScene" uid="uid://bxheuw5r48qrp" path="res://Scenes/GenericEnemies.tscn" id="2_6xvh0"]

[sub_resource type="CylinderMesh" id="CylinderMesh_phw77"]

[sub_resource type="Curve3D" id="Curve3D_bvsxg"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -3.35937, -1.58483, 1.07833),
"tilts": PackedFloat32Array(0)
}
point_count = 1

[node name="Node3D" type="Node3D"]
script = ExtResource("1_bvsxg")
mob_scene = ExtResource("2_6xvh0")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_baluf")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(8, 0, 1441792, 8, 1, 1441792, 8, 2, 1441792, 8, 3, 1441792, 8, 4, 1441795, 8, 5, 1441792, 8, 6, 1441792, 8, 7, 1441792, 8, 65535, 1, 65531, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 7, 65535, 0, 6, 65535, 0, 65530, 0, 1048576, 65530, 1, 1048576, 65530, 2, 1048576, 65530, 3, 1048576, 65530, 4, 1048579, 65530, 5, 1048576, 65530, 6, 1048576, 65530, 7, 1048576, 65530, 65535, 1048577, 65531, 8, 655360, 65532, 8, 655360, 65533, 8, 655360, 65534, 8, 655360, 65535, 8, 655360, 0, 8, 655360, 1, 8, 655360, 2, 8, 655360, 3, 8, 655360, 4, 8, 655360, 5, 8, 655360, 6, 8, 655360, 7, 8, 655360, 8, 8, 1441793, 65530, 8, 655361)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="floor" type="GridMap" parent="."]
mesh_library = ExtResource("1_baluf")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65531, 8, 1441796, 65532, 8, 1441796, 65533, 8, 1441796, 65534, 8, 1441796, 65535, 8, 1441796, 0, 8, 1441796, 1, 8, 1441796, 2, 8, 1441796, 3, 8, 1441796, 4, 8, 1441796, 5, 8, 1441796, 6, 8, 1441796, 7, 8, 1441796, 7, 7, 1441796, 7, 6, 1441796, 7, 5, 1441796, 7, 4, 1441796, 8, 4, 1441796, 8, 3, 1441796, 7, 2, 1441796, 7, 1, 1441796, 7, 3, 1441796, 7, 0, 1441796, 7, 65535, 1441796, 6, 65535, 1441796, 5, 65535, 1441796, 4, 65535, 1441796, 3, 65535, 1441796, 2, 65535, 1441796, 1, 65535, 1441796, 0, 65535, 1441796, 65535, 65535, 1441796, 65534, 65535, 1441796, 65533, 65535, 1441796, 65532, 65535, 1441796, 65531, 65535, 1441796, 65530, 65535, 1441796, 65530, 0, 1441796, 65530, 1, 1441796, 65530, 2, 1441796, 65530, 3, 1441796, 65530, 4, 1441796, 65530, 5, 1441796, 65530, 6, 1441796, 65530, 7, 1441796, 65530, 8, 1441796, 65531, 7, 1441796, 65532, 7, 1441796, 65533, 7, 1441796, 65534, 7, 1441796, 65535, 7, 1441796, 0, 7, 1441796, 1, 7, 1441796, 2, 7, 1441796, 3, 7, 1441796, 4, 7, 1441796, 5, 7, 1441796, 6, 7, 1441796, 6, 6, 1441796, 6, 5, 1441796, 6, 4, 1441796, 6, 3, 1441796, 6, 2, 1441796, 6, 1, 1441796, 6, 0, 1441796, 5, 0, 1441796, 4, 0, 1441796, 3, 0, 1441796, 2, 0, 1441796, 1, 0, 1441796, 0, 0, 1441796, 65535, 0, 1441796, 65534, 0, 1441796, 65533, 0, 1441796, 65532, 0, 1441796, 65531, 0, 1441796, 65531, 1, 1441796, 65531, 2, 1441796, 65531, 3, 1441796, 65531, 4, 1441796, 65531, 5, 1441796, 65531, 6, 1441796, 65532, 6, 1441796, 65533, 6, 1441796, 65534, 6, 1441796, 65535, 6, 1441796, 65535, 5, 1441796, 0, 5, 1441796, 1, 5, 1441796, 2, 5, 1441796, 3, 5, 1441796, 4, 6, 1441796, 5, 6, 1441796, 3, 6, 1441796, 2, 6, 1441796, 1, 6, 1441796, 0, 6, 1441796, 4, 5, 1441796, 5, 5, 1441796, 5, 4, 1441796, 5, 3, 1441796, 5, 2, 1441796, 5, 1, 1441796, 4, 1, 1441796, 3, 1, 1441796, 2, 1, 1441796, 1, 1, 1441796, 0, 1, 1441796, 65535, 1, 1441796, 65534, 1, 1441796, 65533, 1, 1441796, 65532, 1, 1441796, 65532, 2, 1441796, 65532, 3, 1441796, 65532, 4, 1441796, 65533, 4, 1441796, 65533, 5, 1441796, 65532, 5, 1441796, 65534, 5, 1441796, 65534, 4, 1441796, 65534, 3, 1441796, 65533, 3, 1441796, 65533, 2, 1441796, 65534, 2, 1441796, 65535, 3, 1441796, 65535, 4, 1441796, 65535, 2, 1441796, 0, 2, 1441796, 0, 3, 1441796, 0, 4, 1441796, 1, 4, 1441796, 1, 3, 1441796, 1, 2, 1441796, 2, 4, 1441796, 2, 3, 1441796, 3, 3, 1441796, 3, 2, 1441796, 2, 2, 1441796, 3, 4, 1441796, 4, 4, 1441796, 4, 3, 1441796, 4, 2, 1441796, 8, 65535, 1441796, 8, 0, 1441796, 8, 1, 1441796, 8, 2, 1441796, 8, 7, 1441796, 8, 6, 1441796, 8, 5, 1441796, 8, 8, 1441796)
}

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.18611, 0.159036, 0.142491)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.39129, 1.45972, 4.32739)
mesh = SubResource("CylinderMesh_phw77")

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.862474, 3.29409, 4.0895)
light_energy = 4.394
light_volumetric_fog_energy = 0.0
omni_range = 10.65

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.8975, 5.47395, 11.3257)

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 7.87435, 0.202513, -1.31867)
fov = 61.5849

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_bvsxg")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
